# mc-command-agent

./: Cargo.toml  README.md
src/: auth.rs  config.rs  main.rs  routes.rs
static/: index.html
