[package]
name = "mc-command-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["macros", "net"] }
